computer can play itself now. fixed some logic in how moves are chosen. computer is really good now

--- a/Tic tac toe.ipynb
+++ b/Tic tac toe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -12,96 +12,65 @@
      "output_type": "stream",
      "text": [
       "Enter your moves in the format 0,0 to place your mark on the upper left corner of the board\n",
-      "Player 1's turn: 1,1\n",
-      "   |   |   \n",
-      "---+---+---\n",
-      "   | X |   \n",
-      "---+---+---\n",
-      "   |   |   \n",
-      "Computer's turn...\n",
-      "   | O |   \n",
-      "---+---+---\n",
-      "   | X |   \n",
-      "---+---+---\n",
-      "   |   |   \n",
-      "Player 1's turn: 0,2\n",
-      "   | O |   \n",
-      "---+---+---\n",
-      "   | X |   \n",
-      "---+---+---\n",
-      " X |   |   \n",
-      "Computer's turn...\n",
-      " O | O |   \n",
-      "---+---+---\n",
-      "   | X |   \n",
-      "---+---+---\n",
-      " X |   |   \n",
-      "Player 1's turn: 0,1\n",
-      " O | O |   \n",
-      "---+---+---\n",
-      " X | X |   \n",
-      "---+---+---\n",
-      " X |   |   \n",
-      "Computer's turn...\n",
-      " O | O |   \n",
-      "---+---+---\n",
-      " X | X |   \n",
-      "---+---+---\n",
-      " X |   | O \n",
-      "Player 1's turn: 1,2\n",
-      " O | O |   \n",
-      "---+---+---\n",
-      " X | X |   \n",
-      "---+---+---\n",
-      " X | X | O \n",
-      "Computer's turn...\n",
-      " O | O | O \n",
-      "---+---+---\n",
-      " X | X |   \n",
-      "---+---+---\n",
-      " X | X | O \n",
-      "Computer wins!\n",
-      "Game over! Play again? [Y/n] \n",
-      "Player 1's turn: 1,1\n",
-      "   |   |   \n",
-      "---+---+---\n",
-      "   | X |   \n",
-      "---+---+---\n",
-      "   |   |   \n",
-      "Computer's turn...\n",
-      "   | O |   \n",
-      "---+---+---\n",
-      "   | X |   \n",
-      "---+---+---\n",
-      "   |   |   \n",
+      "Recommended play: [11000, -10, 0, 0, 200, 0, 0, 0, 0]\n",
       "Player 1's turn: 0,0\n",
-      " X | O |   \n",
-      "---+---+---\n",
-      "   | X |   \n",
+      " X |   |   \n",
       "---+---+---\n",
       "   |   |   \n",
+      "---+---+---\n",
+      "   |   |   \n",
+      "Recommended play: [0, -10, -10, -10, 1930, -10, 0, -10, -10]\n",
       "Computer's turn...\n",
-      " X | O |   \n",
+      " X |   |   \n",
       "---+---+---\n",
-      "   | X | O \n",
+      "   | O |   \n",
       "---+---+---\n",
       "   |   |   \n",
+      "Recommended play: [0, 0, -10, 4480, 0, 0, 0, 0, -10]\n",
+      "Player 1's turn: 0,1\n",
+      " X |   |   \n",
+      "---+---+---\n",
+      " X | O |   \n",
+      "---+---+---\n",
+      "   |   |   \n",
+      "Recommended play: [0, -10, 0, 0, 0, 0, 1760, -10, -10]\n",
+      "Computer's turn...\n",
+      " X |   |   \n",
+      "---+---+---\n",
+      " X | O |   \n",
+      "---+---+---\n",
+      " O |   |   \n",
+      "Recommended play: [0, -20, 2260, 0, 0, -20, 0, -10, -10]\n",
       "Player 1's turn: 2,0\n",
-      " X | O | X \n",
+      " X |   | X \n",
       "---+---+---\n",
-      "   | X | O \n",
+      " X | O |   \n",
       "---+---+---\n",
-      "   |   |   \n",
+      " O |   |   \n",
+      "Recommended play: [0, 200, 0, 0, 0, -10, 0, -10, -10]\n",
       "Computer's turn...\n",
       " X | O | X \n",
       "---+---+---\n",
-      "   | X | O \n",
+      " X | O |   \n",
       "---+---+---\n",
-      "   |   | O \n",
-      "Player 1's turn: 1,1\n",
-      "That spot was already taken!\n",
-      "Player 1 wins!\n",
-      "Game over! Play again? [Y/n] n\n"
+      " O |   |   \n",
+      "Recommended play: [0, 0, 0, 0, 0, -10, 0, 0, -10]\n",
+      "Player 1's turn: 2,2\n",
+      " X | O | X \n",
+      "---+---+---\n",
+      " X | O |   \n",
+      "---+---+---\n",
+      " O |   | X \n",
+      "Recommended play: [0, 0, 0, 0, 0, 0, 0, 100, 0]\n",
+      "Computer's turn...\n",
+      " X | O | X \n",
+      "---+---+---\n",
+      " X | O |   \n",
+      "---+---+---\n",
+      " O | O | X \n",
+      "Computer wins!\n",
+      "Game over! Play again? [Y/n] n\n",
+      "{'draws': 0, 'player 2 wins': 1, 'player 1 wins': 0}\n"
      ]
     }
    ],
@@ -144,36 +113,47 @@
     "    \n",
     "# return value = [bool gameover, bool computerwin]\n",
     "def check_game_over(board):\n",
-    "    computer_win = False\n",
+    "    winner = False\n",
     "    game_over = False\n",
     "    \n",
     "    # check for x axis wins, so like x-x-x all in a row\n",
     "    for x in range(0,3):\n",
-    "        if board[3*x] != None and board[3*x] == board[3*x+1] and board[x] == board[3*x+2]:\n",
+    "        if board[3*x] != None and board[3*x] == board[3*x+1] and board[3*x] == board[3*x+2]:\n",
+    "#             print(\"horizontal\", x)\n",
     "            game_over = True\n",
-    "            if board[x] == 2:\n",
-    "                computer_win = True\n",
+    "            winner = board[3*x]\n",
     "        \n",
     "    # check for y axis wins, like above but vertically oriented\n",
     "    for y in range(0,3):\n",
     "        if board[y] != None and board[y] == board[y+3] and board[y] == board[y+6]:\n",
+    "#             print(\"vertical\", y)\n",
     "            game_over = True\n",
-    "            if board[y] == 2:\n",
-    "                computer_win = True\n",
+    "            winner = board[y]\n",
     "    \n",
     "    # check for upwards diagonal wins, 0,2-1,1-2,0\n",
-    "    if board[6] == board[4] and board[6] == board[2]:\n",
+    "    if board[4] != None and board[6] == board[4] and board[6] == board[2]:\n",
+    "#         print(\"up diag\")\n",
     "        game_over = True\n",
-    "        if board[4] == 2:\n",
-    "            computer_win = True\n",
+    "        winner = board[4]\n",
     "    \n",
     "    # check for downwards diagonal wins, 0,0-1,1-2,2\n",
-    "    if board[0] == board[4] and board[0] == board[8]:\n",
+    "    if board[4] != None and board[0] == board[4] and board[0] == board[8]:\n",
+    "#         print(\"dn diag\")\n",
     "        game_over = True\n",
-    "        if board[4] == 2:\n",
-    "            computer_win = True\n",
+    "        winner = board[4]\n",
+    "        \n",
+    "    filled = True\n",
+    "    for x in range(0, len(board)):\n",
+    "        if board[x] == None:\n",
+    "            filled = False\n",
+    "            break\n",
     "            \n",
-    "    return [game_over, computer_win]\n",
+    "    if filled:\n",
+    "#         print(\"draw\")\n",
+    "        game_over = True\n",
+    "        winner = None\n",
+    "            \n",
+    "    return [game_over, winner]\n",
     "\n",
     "\n",
     "def switch_player(player):\n",
@@ -183,29 +163,50 @@
     "        return 1\n",
     "    \n",
     "# returns the move so we can add it to the list of moves for this game\n",
-    "def get_computer_move(board, past_boards):\n",
-    "    print(\"Computer's turn...\")\n",
-    "    \n",
+    "def get_computer_move(player, board, past_boards):\n",
     "#     board_pos = random_move(board)\n",
     "    board_pos = move_from_past_moves(board, past_boards)\n",
     "    \n",
     "    move = [board_pos % 3, int(board_pos / 3)]\n",
-    "    add_move_to_board(2, move, board)\n",
+    "    add_move_to_board(player, move, board)\n",
     "    return move\n",
     "\n",
     "def move_from_past_moves(board, past_boards):\n",
-    "    # choose from the highest scored positions in past_boards\n",
     "    current_board_key = past_boards_key(board)\n",
-    "    if current_board_key in past_boards:\n",
-    "        scores = past_boards[current_board_key]\n",
-    "        for score in sorted(scores, reverse=True):\n",
-    "            for x in range(0, len(board)):\n",
-    "                if scores[x] == score and board[x] == None:\n",
-    "                    return x\n",
-    "    else:\n",
+    "    if current_board_key not in past_boards:\n",
     "        return random_move(board)\n",
+    "    else:\n",
+    "        score_hash = {}\n",
+    "        \n",
+    "        # the array of point values corresponding to the value \n",
+    "        # of each potential move when the board is in its current state\n",
+    "        # ex. [0, 0, -10, 0, 900, 0, 0, -10, 0]\n",
+    "        scores = past_boards[current_board_key]\n",
     "\n",
+    "        # create a hash table with the keys as the scores for this board state \n",
+    "        # and the values are arrays of the indices into the board that have that score value\n",
+    "        for index in range(0, len(board)):\n",
+    "            score = scores[index]\n",
     "\n",
+    "            if score in score_hash:\n",
+    "                score_hash[score].append(index)\n",
+    "            else:\n",
+    "                score_hash[score] = [index]\n",
+    "                \n",
+    "            \n",
+    "        # shuffle each array of indices to prevent biasing towards upper left\n",
+    "        for score in score_hash.keys():\n",
+    "            random.shuffle(score_hash[score])\n",
+    "            \n",
+    "        \n",
+    "        # looking at the highest scores first, choose an available move from the list of board indices\n",
+    "        for score in sorted(list(score_hash.keys()), reverse=True):\n",
+    "            potential_moves = score_hash[score]\n",
+    "            for pos in potential_moves:\n",
+    "                if board[pos] == None:\n",
+    "                    return pos\n",
+    "\n",
+    "                \n",
     "def past_boards_key(board):\n",
     "    boards_key = []\n",
     "    for pos in board:\n",
@@ -251,68 +252,112 @@
     "    this_game_board = [None] * 9\n",
     "    for game_input in this_games_input:\n",
     "        board_pos = 3*game_input['move'][1] + game_input['move'][0]\n",
+    "\n",
+    "        current_board_key = past_boards_key(this_game_board)\n",
+    "        if current_board_key not in past_boards:\n",
+    "            past_boards[current_board_key] = [0] * 9\n",
+    "\n",
+    "        if game_over_result[1] == game_input['player']:\n",
+    "            past_boards[current_board_key][board_pos] += 100 # win\n",
+    "        elif game_over_result[1] != None:\n",
+    "            past_boards[current_board_key][board_pos] -= 10 # loss\n",
+    "        else:\n",
+    "            past_boards[current_board_key][board_pos] -= 1 # draw\n",
+    "            \n",
     "        this_game_board[board_pos] = game_input['player']\n",
     "        \n",
-    "        if game_input['player'] == 2:\n",
-    "            current_board_key = past_boards_key(this_game_board)\n",
-    "            if current_board_key not in past_boards:\n",
-    "                past_boards[current_board_key] = [0] * 9\n",
-    "            \n",
-    "            if game_over_result[1]: # computer_win == True\n",
-    "                past_boards[current_board_key][board_pos] += 1\n",
-    "            else:\n",
-    "                past_boards[current_board_key][board_pos] -= 1\n",
     "    \n",
     "    return past_boards\n",
     "            \n",
     "\n",
-    "def game_loop(past_boards):\n",
+    "def game_loop(past_boards, computer_only, analytics):\n",
     "    board = [None] * 9\n",
     "    player = 1\n",
     "    this_games_moves = []\n",
     "    game_over_result = [False]\n",
+    "\n",
     "    while not game_over_result[0]:\n",
-    "        if player == 2:\n",
-    "            this_games_moves.append({'player':player, 'move': get_computer_move(board, past_boards)})\n",
+    "        current_board_key = past_boards_key(board)\n",
+    "        if current_board_key in past_boards:\n",
+    "            print(\"Recommended play:\", past_boards[current_board_key])\n",
+    "            \n",
+    "        if computer_only:\n",
+    "            this_games_moves.append({'player':player, 'move': get_computer_move(player, board, past_boards)})\n",
     "        else:\n",
-    "            player_move = get_player_move(player, board)\n",
-    "            if player_move != False and check_move_valid(player, player_move, board):  \n",
-    "                this_games_moves.append({'player':player, 'move':player_move})\n",
-    "                add_move_to_board(player, player_move, board)\n",
+    "            if player == 2:\n",
+    "                print(\"Computer's turn...\")\n",
+    "                this_games_moves.append({'player':player, 'move': get_computer_move(player, board, past_boards)})\n",
     "            else:\n",
-    "                break\n",
+    "                player_move = get_player_move(player, board)\n",
+    "                if player_move != False and check_move_valid(player, player_move, board):  \n",
+    "                    this_games_moves.append({'player':player, 'move':player_move})\n",
+    "                    add_move_to_board(player, player_move, board)\n",
+    "                else:\n",
+    "                    break\n",
     "            \n",
     "        player = switch_player(player)\n",
-    "        print_board(board)\n",
+    "        if not computer_only:\n",
+    "            print_board(board)\n",
+    "            \n",
     "        game_over_result = check_game_over(board)\n",
     "        \n",
     "    if game_over_result[0]:\n",
-    "        if game_over_result[1]:\n",
-    "            print(\"Computer wins!\")\n",
+    "        if game_over_result[1] == 2:\n",
+    "            analytics['player 2 wins'] += 1\n",
+    "            if not computer_only:\n",
+    "                print(\"Computer wins!\")\n",
+    "        elif game_over_result[1] == 1:\n",
+    "            analytics['player 1 wins'] += 1\n",
+    "            if not computer_only:\n",
+    "                print(\"Player 1 wins!\")\n",
     "        else:\n",
-    "            print(\"Player 1 wins!\")\n",
+    "            analytics['draws'] += 1\n",
+    "            if not computer_only:\n",
+    "                print(\"Cat's game! (Draw)\")\n",
+    "            \n",
     "        \n",
-    "    past_boards = score_past_boards(past_boards, this_games_moves, game_over_result)\n",
+    "    if game_over_result[1] != None:\n",
+    "        past_boards = score_past_boards(past_boards, this_games_moves, game_over_result)\n",
     "        \n",
-    "    continue_input = input(\"Game over! Play again? [Y/n] \") \n",
-    "    if continue_input == '' or continue_input == 'Y' or continue_input == 'y':\n",
-    "        return True\n",
-    "    return False\n",
+    "    if not computer_only:\n",
+    "        continue_input = input(\"Game over! Play again? [Y/n] \") \n",
+    "        if continue_input == '' or continue_input == 'Y' or continue_input == 'y':\n",
+    "            return True\n",
+    "        return False\n",
     "   \n",
     "\n",
     "if __name__ == \"__main__\":\n",
+    "    computer_only = False\n",
+    "    game_count = 100000\n",
+    "    analytics = {\n",
+    "        'player 1 wins': 0,\n",
+    "        'player 2 wins': 0,\n",
+    "        'draws': 0\n",
+    "    }\n",
+    "    \n",
     "    try:\n",
     "        with open('saved_moves.txt', 'rb') as handle:\n",
     "            past_boards = pickle.loads(handle.read())\n",
+    "#             past_boards = {}\n",
+    "            \n",
     "    except FileNotFoundError:\n",
     "        past_boards = {}\n",
     "        \n",
-    "    print(\"Enter your moves in the format 0,0 to place your mark on the upper left corner of the board\")\n",
-    "    while game_loop(past_boards):\n",
-    "        pass\n",
+    "        \n",
+    "    if computer_only:\n",
+    "        for x in range(0, game_count):\n",
+    "            game_loop(past_boards, computer_only, analytics)\n",
+    "            if x % 5000 == 0:\n",
+    "                print(\"Game #\", x, \"...\")\n",
+    "    else:\n",
+    "        print(\"Enter your moves in the format 0,0 to place your mark on the upper left corner of the board\")\n",
+    "        while game_loop(past_boards, computer_only, analytics):\n",
+    "            pass\n",
     "    \n",
     "    with open('saved_moves.txt', 'wb') as handle:\n",
     "        pickle.dump(past_boards, handle)\n",
+    "    \n",
+    "    print(analytics)\n",
     "    \n",
     "    \n",
     "    "
@@ -326,11 +371,21 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -344,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
